# DCL_BlueBall

./: .gitignore  CMakeLists.txt  README.md  area.xdsl  blueball_network.xdsl  flatness.xdsl  flatness2.xdsl  in_blueball_network.xdsl  newNet.xdsl
src/: BlueballConfig.cmake.in  CMakeLists.txt
src/Components/: CMakeLists.txt
src/Components/FeatureExtraction/: CMakeLists.txt  FeatureExtraction.cpp  FeatureExtraction.hpp
src/Components/FeatureExtractor/: CMakeLists.txt  FeatureExtractor.cpp  FeatureExtractor.hpp
src/Components/HypothesesEvaluation/: CMakeLists.txt  HypothesesEvaluation.cpp  HypothesesEvaluation.hpp
src/Components/LUT/: CMakeLists.txt  LUT.cpp  LUT.hpp
src/Components/MS_Blueball_Decide/: MS_Blueball_Decide.cpp  MS_Blueball_Decide.hpp
src/Components/MS_Blueball_LUT/: MS_Blueball_LUT.cpp  MS_Blueball_LUT.hpp
src/Components/MS_Blueball_Network/: CMakeLists.txt  MS_Blueball_Network.cpp  MS_Blueball_Network.hpp
src/Types/: CMakeLists.txt
tasks/: BlueBall.xml  home.xml  homeNoLut.xml  sequence.xml  sequence_ball.xml  sequence_spot.xml
